--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   },
   "bin": [
-    "typo3automation.php"
+    "typo3automation"
   ],
   "require-dev": {
     "phpunit/phpunit": "^9.5"
